
[metadata]
version = 0.1.0
name = deepnn
description = Deep Neural Network package
author = JPena
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
packages =
    deepnn
install_requires = file: requirements.txt
python_requires = >=3.8
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing =
    pytest>=7.2.0
    pytest-cov>=4.0
    mypy>=0.991
    flake8>=6.0
    tox>=4.3

[options.package_data]
deepnn = py.typed

[flake8]
max-line-length = 120
max-complexity = 10
exclude =
    __pycache__,
    docs,
    reports,
    .pytest_cache/,
    # This contains our built documentation
    build,
    # This contains builds of flake8 that we don't want to check
    dist
per-file-ignores =
    # imported but unused
    __init__.py: F401
statistics = True