[metadata]
version = 0.1.0
name = neural_networks
description = Deep Neural Network package
author = josejuan98
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
install_requires = file: requirements.txt
python_requires = >=3.8,<3.11
package_dir =
    =src
zip_safe = no

[options.extras_require]
dev =
    sklearn
    jupyterlab
    ipykernel
    scipy
    h5py
test =
    pytest>=7.2.0
    pytest-cov>=4.0
    coverage
    pytest-timeout
    pytest-xdist
    mypy>=0.991
    flake8>=6.0
    tox>=4.3
build =
    build
    wheel
    setuptools

[options.package_data]
deepnn = py.typed

[build-system]
requires =
    setuptools
    wheel
build-backend = setuptools.build_meta

[wheel]
universal = 1

[tool:pytest]
addopts =
    -n auto
    -vv
    -s
testpaths = test


[flake8]
max-line-length = 120
max-complexity = 10
exclude =
    __pycache__,
    docs,
    reports,
    .pytest_cache/,
    # This contains our built documentation
    build,
    # This contains builds of flake8 that we don't want to check
    dist,
    .tox,
    venv,
    .git
per-file-ignores =
    # imported but unused
    __init__.py: F401
statistics = False

[mypy]
mypy_path = $MYPY_CONFIG_FILE_DIR/src/
check_untyped_defs = true
disallow_any_generics = true
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
no_implicit_reexport = true
